--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 
-<a href="instagram-marketing-blog.html"Instagram Blog</a>
+<a href="instagram-marketing-blog.html">Instagram Blog</a>
 
 </html>
