added settings, blogs, css

--- a/index.html
+++ b/index.html
@@ -1,6 +1,72 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Professional Blog Homepage</title>
+    <link rel="stylesheet" href="css/header.css" />
+    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/footer.css" />
+  </head>
+  <body>
+    <!-- Header Section -->
+    <header>
+      <div class="container">
+        <h1>Dynamod Blogs</h1>
+        <nav>
+          <ul>
+            <li><a href="#english-blogs">English Blogs</a></li>
+            <li><a href="#german-blogs">German Blogs</a></li>
+            <li><a href="#contact">Contact Us</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
 
-<a href="instagram-marketing-blog.html">Instagram Blog</a>
+    <!-- Main Content Section -->
+    <main>
+      <!-- English Blogs Section -->
+      <section id="english-blogs">
+        <h2>English Blogs</h2>
+        <ul>
+          <li>
+            <a href="blogs/english/business-proposals-blog 1.html"
+              >Business Proposals Blog</a
+            >
+          </li>
+          <li><a href="blogs/english/rfb-blog 1.html">RFB Blog</a></li>
+          <li>
+            <a href="blogs/english/valorant-blog 1.html">Valorant Blog</a>
+          </li>
+        </ul>
+      </section>
 
+      <!-- German Blogs Section -->
+      <section id="german-blogs">
+        <h2>German Blogs</h2>
+        <ul>
+          <li>
+            <a href="blogs/german/instagram-marketing-blog.html"
+              >Instagram Marketing Blog</a
+            >
+          </li>
+          <li>
+            <a href="blogs/german/penetrationstests-blog.html"
+              >Penetrationstests Blog</a
+            >
+          </li>
+        </ul>
+      </section>
+    </main>
+
+    <!-- Footer Section -->
+    <footer>
+      <div class="container">
+        <p>&copy; 2024 Dynamod</p>
+        <div class="social-media">
+          <a href="#facebook">Facebook</a> | <a href="#twitter">Twitter</a> |
+          <a href="#linkedin">LinkedIn</a>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
