updated names and centered divs

--- a/blogs/english/rfb-blog.html
+++ b/blogs/english/rfb-blog.html
@@ -59,20 +59,22 @@
         <h2 id="understanding-the-basics-of-rfps">
           Understanding the Basics of RFPs
         </h2>
-        <iframe
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/3JV9_zvdsIo"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; 
+        <div style="text-align: center">
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/3JV9_zvdsIo"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; 
 autoplay; 
 clipboard-write; 
 encrypted-media; 
 'gyroscope; 
 picture-in-picture"
-          allowfullscreen
-        ></iframe>
+            allowfullscreen
+          ></iframe>
+        </div>
         <h3 id="what-is-an-rfp-and-why-it-matters">
           What is an RFP and Why It Matters
         </h3>
