--- a/blogs/english/valorant-blog.html
+++ b/blogs/english/valorant-blog.html
@@ -69,20 +69,22 @@
         <h2 id="why-buy-valorant-accounts-benefits-and-considerations">
           Why Buy Valorant Accounts: Benefits and Considerations
         </h2>
-        <iframe
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/lLo51CaqNLQ"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; 
+        <div style="text-align: center">
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/lLo51CaqNLQ"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; 
 autoplay; 
 clipboard-write; 
 encrypted-media; 
 'gyroscope; 
 picture-in-picture"
-          allowfullscreen
-        ></iframe>
+            allowfullscreen
+          ></iframe>
+        </div>
         <h3 id="benefits-of-buying-valorant-accounts">
           Benefits of Buying Valorant Accounts
         </h3>
