--- a/blogs/german/penetrationstests-blog.html
+++ b/blogs/german/penetrationstests-blog.html
@@ -73,20 +73,22 @@
         <h2 id="was-ist-ein-penetrationstest-und-warum-ist-er-wichtig">
           Was ist ein Penetrationstest und warum ist er wichtig?
         </h2>
-        <iframe
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/5U9pT_vXQGE"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; 
+        <div style="text-align: center">
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/5U9pT_vXQGE"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; 
 autoplay; 
 clipboard-write; 
 encrypted-media; 
 'gyroscope; 
 picture-in-picture"
-          allowfullscreen
-        ></iframe>
+            allowfullscreen
+          ></iframe>
+        </div>
         <p>
           Ein <strong>Penetrationstest</strong> ist ein gezielter Angriff auf
           ein Computersystem, um
