--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
         <h2>English Blogs</h2>
         <ul>
           <li>
-            <a href="blogs/english/business-proposals-blog 1.html"
+            <a href="blogs/english/business-proposals-blog.html"
               >Business Proposals Blog</a
             >
           </li>
-          <li><a href="blogs/english/rfb-blog 1.html">RFB Blog</a></li>
+          <li><a href="blogs/english/rfb-blog.html">RFB Blog</a></li>
           <li>
-            <a href="blogs/english/valorant-blog 1.html">Valorant Blog</a>
+            <a href="blogs/english/valorant-blog.html">Valorant Blog</a>
           </li>
         </ul>
       </section>
