--- a/blogs/german/instagram-marketing-blog.html
+++ b/blogs/german/instagram-marketing-blog.html
@@ -70,20 +70,22 @@
         >
           Effektive Strategien für Instagram Marketing als Selbstständiger
         </h2>
-        <iframe
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/xULhg0lvSww"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; 
+        <div style="text-align: center">
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/xULhg0lvSww"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; 
 autoplay; 
 clipboard-write; 
 encrypted-media; 
 'gyroscope; 
 picture-in-picture"
-          allowfullscreen
-        ></iframe>
+            allowfullscreen
+          ></iframe>
+        </div>
         <h3
           id="content-marketing-überzeugende-inhalte-für-selbstständige-erstellen"
         >
