--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
               >Penetrationstests Blog</a
             >
           </li>
+          <li>
+            <a href="blogs/german/cybersecurity.html">Cybersecurity Blog</a>
+          </li>
         </ul>
       </section>
     </main>
