--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
           <li>
             <a href="blogs/german/cybersecurity.html">Cybersecurity Blog</a>
           </li>
+          <li>
+            <a href="blogs/german/penetrationtests-and-cybersecurity.html"
+              >Penetrationtests and Cybersecurity Blog</a>
+          </li>
         </ul>
       </section>
     </main>
