moved footer to bottom

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Professional Blog Homepage</title>
+    <title> Dynamod Blogs </title>
     <link rel="stylesheet" href="css/header.css" />
     <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="css/footer.css" />
@@ -16,7 +16,6 @@
           <ul>
             <li><a href="#english-blogs">English Blogs</a></li>
             <li><a href="#german-blogs">German Blogs</a></li>
-            <li><a href="#contact">Contact Us</a></li>
           </ul>
         </nav>
       </div>
@@ -69,10 +68,6 @@
     <footer>
       <div class="container">
         <p>&copy; 2024 Dynamod</p>
-        <div class="social-media">
-          <a href="#facebook">Facebook</a> | <a href="#twitter">Twitter</a> |
-          <a href="#linkedin">LinkedIn</a>
-        </div>
       </div>
     </footer>
   </body>
