--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title> Dynamod Blogs </title>
+    <title>Dynamod Blogs</title>
     <link rel="stylesheet" href="css/header.css" />
     <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="css/footer.css" />
@@ -36,6 +36,14 @@
           <li>
             <a href="blogs/english/valorant-blog.html">Valorant Blog</a>
           </li>
+          <li>
+            <a href="blogs/english/sound-game-dev.html">Sound Game Dev Blog</a>
+          </li>
+          <li>
+            <a href="blogs/english/minecraft-icon-shops.html"
+              >Minecraft Icon Shops Blog</a
+            >
+          </li>
         </ul>
       </section>
 
@@ -58,7 +66,8 @@
           </li>
           <li>
             <a href="blogs/german/penetrationtests-and-cybersecurity.html"
-              >Penetrationtests and Cybersecurity Blog</a>
+              >Penetrationtests and Cybersecurity Blog</a
+            >
           </li>
         </ul>
       </section>
