--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
               >Minecraft Icon Shops Blog</a
             >
           </li>
+          <li></li>
+          <a href="blogs/english/valuvis-house-rent.html"
+            >Valuvis House Rent Blog</a
+          >
         </ul>
       </section>
 
@@ -67,6 +71,11 @@
           <li>
             <a href="blogs/german/penetrationtests-and-cybersecurity.html"
               >Penetrationtests and Cybersecurity Blog</a
+            >
+          </li>
+          <li>
+            <a href="blogs/german/valuvis-haus-vermieten.html"
+              >Valuvis Haus Vermieten Blog</a
             >
           </li>
         </ul>
