--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
               >Minecraft Icon Shops Blog</a
             >
           </li>
+          <li>
+            <a href="blogs/english/pachinko-slots.html"
+              >Pachinko Slots Blog</a
+            >
+          </li>
         </ul>
       </section>
 
