--- a/index.html
+++ b/index.html
@@ -45,9 +45,13 @@
             >
           </li>
           <li>
-            <a href="blogs/english/pachinko-slots.html"
-              >Pachinko Slots Blog</a
-            >
+            <a href="blogs/english/pachinko-slots.html">Pachinko Slots Blog</a>
+          </li>
+          <li>
+            <a href="blogs/english/cloud-hosting.html">Cloud Hosting Blog</a>
+          </li>
+          <li>
+            <a href="blogs/english/summer-music.html">Summer Music Blog</a>
           </li>
         </ul>
       </section>
@@ -77,6 +81,11 @@
           <li>
             <a href="blogs/german/valuvis-haus-vermieten.html"
               >Valuvis Haus Vermieten Blog</a
+            >
+          </li>
+          <li>
+            <a href="blogs/german/passkeys-einrichten.html"
+              >Passkeys Einrichten Blog</a
             >
           </li>
         </ul>
