--- a/index.html
+++ b/index.html
@@ -51,7 +51,18 @@
             <a href="blogs/english/cloud-hosting.html">Cloud Hosting Blog</a>
           </li>
           <li>
+            <a href="blogs/english/cloud-hosting-no-review.html"
+              >Cloud Hosting No Review Blog</a
+            >
+          </li>
+
+          <li>
             <a href="blogs/english/summer-music.html">Summer Music Blog</a>
+          </li>
+          <li>
+            <a href="blogs/english/summer-music-no-review.html"
+              >Summer Music No Review Blog</a
+            >
           </li>
         </ul>
       </section>
@@ -86,6 +97,11 @@
           <li>
             <a href="blogs/german/passkeys-einrichten.html"
               >Passkeys Einrichten Blog</a
+            >
+          </li>
+          <li>
+            <a href="blogs/german/passkeys-einrichten-no-review.html"
+              >Passkeys Einrichten No Review Blog</a
             >
           </li>
         </ul>
