--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
               >Passkeys Einrichten No Review Blog</a
             >
           </li>
+          <li>
+            <a href="blogs/german/buchhaltung.html">Buchhaltung Blog</a>
+          </li>
         </ul>
       </section>
     </main>
