added blogs and formatting

--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
               >Summer Music No Review Blog</a
             >
           </li>
+          <li>
+            <a href="blogs/english/roofing-square.html">Roofing Square Blog</a>
+          </li>
+          <li>
+            <a href="blogs/english/tpo-roofing.html">TPO Roofing Blog</a>
+          </li>
         </ul>
       </section>
 
