--- a/index.html
+++ b/index.html
@@ -70,6 +70,24 @@
           <li>
             <a href="blogs/english/tpo-roofing.html">TPO Roofing Blog</a>
           </li>
+          <li>
+            <a href="blogs/english/learn-python.html">Learn Python Blog</a>
+          </li>
+          <li>
+            <a href="blogs/english/quickboost-for-freelancers.html"
+              >Quickboost for Freelancers Blog</a
+            >
+          </li>
+          <li>
+            <a href="blogs/english/quickboost-six-steps.html"
+              >Quickboost Six Steps Blog</a
+            >
+          </li>
+          <li>
+            <a href="blogs/english/youtube-title-generator.html"
+              >YouTube Title Generator Blog</a
+            >
+          </li>
         </ul>
       </section>
 
