--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
               >YouTube Title Generator Blog</a
             >
           </li>
+          <li>
+            <a href="blogs/english/cost-effective-hosting.html"
+              >Cost Effective Hosting Blog</a
+            >
+          </li>
         </ul>
       </section>
 
