--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
               >Cost Effective Hosting Blog</a
             >
           </li>
+          <li>
+            <a href="blogs/english/logo-and-web-design.html"
+              >Logo and Web Design Blog</a
+            >
         </ul>
       </section>
 
