--- a/index.html
+++ b/index.html
@@ -97,6 +97,16 @@
             <a href="blogs/english/logo-and-web-design.html"
               >Logo and Web Design Blog</a
             >
+          </li>
+          <li>
+            <a href="blogs/english/software-deals.html">Software Deals Blog</a>
+          </li>
+          <li>
+            <a href="blogs/english/seo-tools.html">SEO Tools Blog</a>
+          </li>
+          <li>
+            <a href="blogs/english/app-sumo.html">App Sumo Blog</a>
+          </li>
         </ul>
       </section>
 
