--- a/index.html
+++ b/index.html
@@ -107,6 +107,14 @@
           <li>
             <a href="blogs/english/app-sumo.html">App Sumo Blog</a>
           </li>
+          <li>
+            <a href="blogs/english/cluster-articles.html"
+              >Cluster Articles Blog</a
+            >
+          </li>
+          <li>
+            <a href="blogs/english/ai-content.html">AI Content Blog</a>
+          </li>
         </ul>
       </section>
 
