--- a/index.html
+++ b/index.html
@@ -158,6 +158,9 @@
           <li>
             <a href="blogs/german/buchhaltung.html">Buchhaltung Blog</a>
           </li>
+          <li>
+            <a href="blogs/german/marketing-mix.html">Marketing Mix Blog</a>
+          </li>
         </ul>
       </section>
     </main>
