--- a/index.html
+++ b/index.html
@@ -161,6 +161,9 @@
           <li>
             <a href="blogs/german/marketing-mix.html">Marketing Mix Blog</a>
           </li>
+          <li>
+            <a href="blogs/german/bayreuth.html">Bayreuth Blog</a>
+          </li>
         </ul>
       </section>
     </main>
