--- a/index.html
+++ b/index.html
@@ -159,10 +159,19 @@
             <a href="blogs/german/buchhaltung.html">Buchhaltung Blog</a>
           </li>
           <li>
+            <a href="blogs/german/buchhaltung-2.html">Buchhaltung Blog</a>
+          </li>
+          <li>
             <a href="blogs/german/marketing-mix.html">Marketing Mix Blog</a>
           </li>
           <li>
             <a href="blogs/german/bayreuth.html">Bayreuth Blog</a>
+          </li>
+          <li>
+            <a href="blogs/german/blog.html">Blog Blog</a>
+          </li>
+          <li>
+            <a href="blogs/german/waschmaschine.html">Waschmaschine Blog</a>
           </li>
         </ul>
       </section>
